# zephyr_alif

./: CMakeLists.txt  test_samples.groovy  west.yml
automation/: Jenkinsfile
boards/common/: alif_flash.board.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: Kconfig.alif  adc_alif.c
drivers/audio/: CMakeLists.txt  Kconfig.dmic_alif  alif_pdm.c  alif_pdm_reg.h
drivers/can/: Kconfig.cast
drivers/clock_control/: CMakeLists.txt  clock_control_alif_balletto.c  clock_control_alif_ensemble.c
drivers/comparator/: Kconfig.alif  alif_cmp.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.alif  Kconfig.dw  counter_alif_utimer.c  counter_dw_rtc.c  counter_dw_timer.c
drivers/crc/: CMakeLists.txt  Kconfig  Kconfig.alif  Kconfig.crc  alif_crc.c
drivers/dac/: CMakeLists.txt  Kconfig  Kconfig.alif  dac_alif.c
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.cdc200  display_cdc200.c  display_cdc200.h
drivers/dma/: dma_pl330.c  dma_pl330.h
drivers/flash/: CMakeLists.txt  Kconfig.alif  flash_mram_alif.c  flash_ospi_is25wx.c  flash_ospi_is25wx.h
drivers/gpio/: gpio_dw.c
drivers/i2c/: Kconfig.alif  Kconfig.dw  i2c_dw.c  i2c_dw.h
drivers/i2s/: alif_i2s_clk_config.h
drivers/i3c/: i3c_dw.c
drivers/ieee802154/: Kconfig.alif  ieee802154_alif.c  ieee802154_alif.h
drivers/ipm/: CMakeLists.txt  Kconfig  ipm_arm_mhuv2.c  ipm_arm_mhuv2.h
drivers/mipi_dphy/: CMakeLists.txt  Kconfig  Kconfig.ensemble  dphy_dw.c  dphy_dw.h  ensemble_dphy.c  ensemble_dphy.h
drivers/mipi_dsi/: CMakeLists.txt  Kconfig  Kconfig.ensemble  dsi_dw.c  dsi_dw.h  ensemble_dsi.c  ensemble_dsi.h
drivers/pinctrl/: Kconfig.alif  pinctrl_alif.c
drivers/pwm/: Kconfig.alif  pwm_alif_utimer.c
drivers/sdhc/: CMakeLists.txt  Kconfig  (+5 more)
modules/: Kconfig.alif
soc/arm/alif_balletto/: CMakeLists.txt
soc/arm/alif_balletto/b1/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  soc.h  soc_b1_dk_rtss_he.c  soc_b1_fpga_rtss_he.c
soc/arm/alif_balletto/common/: Kconfig.soc  mpu_regions.c  soc_balletto_common.S
soc/arm/alif_ensemble/: CMakeLists.txt  Kconfig
soc/arm/alif_ensemble/common/: Kconfig.soc  alif_ns.ld  alif_sram.ld  linker.ld  mpu_regions.c  soc.c  soc_ensemble_common.S
soc/arm/alif_ensemble/e1c/: CMakeLists.txt  Kconfig.series  Kconfig.soc  soc.h  soc_e1c_dk_rtss_he.c
soc/arm/alif_ensemble/e3/: CMakeLists.txt  Kconfig.series  Kconfig.soc  soc.h  soc_e3_dk_rtss_he.c  soc_e3_dk_rtss_hp.c
soc/arm/alif_ensemble/e7/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  soc.h  soc_e7_dk_rtss_he.c  soc_e7_dk_rtss_hp.c
(+143 files in other folders)
